@@ -1112,7 +1112,7 @@
 				</setting>
 				<setting id="skipintro.aniskip.auto" type="boolean" label="30426" help="">
 					<level>0</level>
-					<default>true</default>
+					<default>false</default>
 					<control type="toggle"/>
 					<dependencies>
 						<dependency type="visible" setting="skipintro.aniskip.enable">true</dependency>
@@ -1202,7 +1202,7 @@
 				</setting>
 				<setting id="skipoutro.aniskip.auto" type="boolean" label="30427" help="">
 					<level>0</level>
-					<default>true</default>
+					<default>false</default>
 					<control type="toggle"/>
 					<dependencies>
 						<dependency type="visible" setting="skipoutro.aniskip.enable">true</dependency>
